--- a/team-project-3/src/index.css
+++ b/team-project-3/src/index.css
@@ -26,3 +26,15 @@
   box-shadow: 0px 0px 20px grey;
   margin-top: 20px;
 }
+
+.btn{
+  border-radius: 8px;
+  background-color: blueviolet;
+  color: white;
+
+}
+
+.all{
+  margin: auto;
+  text-align: center;
+}
